调用点赞接口

--- a/video/package.json
+++ b/video/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.2.0",
     "react-lottie": "^1.2.3",
     "react-scripts": "3.4.1",
     "react-ticker": "^1.2.2",
